# scikit-build-poetry-plugin

./: .gitignore  README.md  pyproject.toml
sample/: README.md  build.py  pyproject.toml
sample/python_template/hello_world/: greeter.py
scikit_build_plugin/: arguments.py  plugin.py
